11_minikube/_backups/old_deployments/orbit/outbound-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outbound-api
spec:
  rules:
    - host: "outbound-api.minikube"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: outbound-api
                port:
                  name: api
